# foodgram-project-react

./: .gitignore
backend/: pyproject.toml
backend/backend/api/: serializers.py  urls.py  views.py
backend/backend/backend/: settings.py
backend/backend/users/: admin.py  models.py  validators.py
backend/backend/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_password.py  0004_alter_user_password_alter_user_username.py  0005_alter_user_first_name_alter_user_last_name.py
